# docker-compose-prometheus-grafana

./: .env  .gitignore  Exercice.md  README.md  docker-compose copy  docker-compose.yml
fastapi_app/: Dockerfile  main.py  pyproject.toml
prometheus/: prometheus.yml
provisioning/dashboards/: dashboards.yml
provisioning/datasources/: datasource.yml
streamlit_app/: Dockerfile  app.py  pyproject.toml
